force-app/main/default/objects/Class__c/fields/Assistant_Staff_Member__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Staff_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assistant Staff Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Class_Schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>