force-app/main/default/objects/Class__c/fields/Class_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Class_Capacity__c</fullName>
    <label>Class Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>