force-app/main/default/objects/Class__c/fields/Staff_Member__c.field-meta.xml
<CustomField>
    <fullName>Staff_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Class_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>