force-app/main/default/objects/Class__c/fields/Total_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Members__c</fullName>
    <label>Total Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>