force-app/main/default/objects/Class__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Staff_Member__c</columns>
    <columns>Assistant_Staff_Member__c</columns>
    <columns>Class_Capacity__c</columns>
    <columns>Total_Members__c</columns>
    <columns>Monthly_Fee__c</columns>
    <columns>Yearly_Fee__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Remaining_Seats__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>